--- a/package.json
+++ b/package.json
@@ -1,23 +1,11 @@
 {
-  "name": "sequelize-with-postgres",
+  "name": "riliv-backend-test",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "orie chinedu",
+  "author": "dia kurnia",
   "license": "MIT",
   "scripts": {
-    "start-dev": "nodemon index.js",
-    "migrate": "npx sequelize-cli db:migrate",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
-    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
-    "pretest": "cross-env NODE_ENV=test npm run migrate:reset",
-    "coverage": "npm run pretest && jest --coverage && cat ./coverage/lcov.info | coveralls"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "verbose": true
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "dotenv": "^8.0.0",
@@ -27,9 +15,6 @@
     "sequelize": "^5.12.3"
   },
   "devDependencies": {
-    "coveralls": "^3.0.6",
-    "cross-env": "^5.2.0",
-    "jest": "^24.9.0",
     "nodemon": "^1.19.1",
     "supertest": "^4.0.2"
   }
