--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.12.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1",
-    "supertest": "^4.0.2"
+    "nodemon": "^1.19.1"
   }
 }
