--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "dia kurnia",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
